log/build_2025-08-07_13-05-30/arduinobot_py_example/stderr.log
  File "/home/sksuser/arduinobot_ws/install/arduinobot_py_example/lib/python3.10/site-packages/arduinobot_py_example/simple_subscriber.py", line 26
    main())
          ^
SyntaxError: unmatched ')'

